[Web Payments] Use temporary autofill profile in shipping editor

Bug: 746544
Change-Id: I0b6813c118d90b47dd5b82c5721bac3d5e05aca1
Reviewed-on: https://chromium-review.googlesource.com/580070
Commit-Queue: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488412}
Former-commit-id: f4f053cc840dc7f4ff56950bb88be6a7422d6331